Fix extra space below top bar

--- a/app/assets/stylesheets/hyku.scss
+++ b/app/assets/stylesheets/hyku.scss
@@ -1,16 +1,4 @@
 #masthead {
-  @media (min-width: $screen-sm-min) {
-    &.navbar {
-      min-height: 35px;
-    }
-
-    .navbar-nav > li > a,
-    .navbar-brand {
-      height: 35px;
-      padding-top: 7.5px;
-    }
-  }
-
   #logo {
     margin-left: 10px;
   }
@@ -23,7 +11,6 @@
     display: none;
   }
 }
-
 
 .jumbotron {
   background: image_url('white-cloud-background.jpg') repeat-x;
